K1J-405: Refactoring and fixes. Fixed dss metadata update problem.